--- a/components/Settings/SettingsButton/SettingsButton.module.css
+++ b/components/Settings/SettingsButton/SettingsButton.module.css
@@ -1,5 +1,5 @@
 .button {
-  @apply absolute bottom-3 right-3 z-[995] flex justify-center items-center gap-2
+  @apply absolute bottom-1 md:bottom-3 right-3 z-[995] flex justify-center items-center gap-2
   bg-transparent text-secondary-500 text-2xl border border-secondary-500 py-2 px-4
   cursor-pointer transition-all hover:bg-secondary-500 hover:text-primary-800 rounded
 }
